Fixed consistency with API naming
